# cpythonclassesframeworkscomp

./: .gitignore  fast_run.ps1  fast_run.sh  pyproject.toml
benchmarks/: benchmark_creation.py  benchmark_memory.py  benchmark_real_cases.py  benchmark_serialization.py  benchmark_serialization_wt_gc.py  log_parser.py  logger_config.py  models.py  visualize_boxplots.py
results/: continuous_serialization.csv  format_comparison.csv  json_memory_efficiency.csv  json_scaling_results.csv  json_type_comparison.csv  nested_serialization.csv
rust_pyo3_usage/: Cargo.toml  main.py
rust_pyo3_usage/src/: lib.rs
serialization_benches/: argument_types.py  argument_types_plotting.py  continious_arguments.py  continuous_arguments_plotting.py  nested_arguments.py  nested_arguments_plotting.py  output_formats.py  output_formats_plotting.py
