[project]
name = "cpythonclassesframeworkscomp"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "maturin>=1.13.3",
    "msgspec>=0.21.1",
    "pandas>=3.0.3",
    "psutil>=7.2.2",
    "pydantic>=2.13.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
